--- a/dmd-script.1
+++ b/dmd-script.1
@@ -113,6 +113,8 @@ compile in unit tests
 verbose
 .IP -vdmd
 Print commands executed by this wrapper script
+.IP --version
+print compiler version and exit
 .IP -version=level
 compile in version code >= level
 .IP  version=ident
