Fix typo in manual

--- a/dmd-script.1
+++ b/dmd-script.1
@@ -101,7 +101,7 @@ profile runtime performance
 enforce property syntax
 .IP -quiet
 suppress unnecessary error messages
-.IP -q<arg1>[,<arg2>,<arg3>,...]
+.IP -q,<arg1>[,<arg2>,<arg3>,...]
 Pass the comma-separated arguments to gdc
 .IP -release
 compile release version
