add -shared option

--- a/dmd-script.1
+++ b/dmd-script.1
@@ -107,6 +107,8 @@ Pass the comma-separated arguments to gdc
 compile release version
 .IP -run
 run resulting program, passing args
+.IP -shared
+generate shared library (DLL)
 .IP -unittest
 compile in unit tests
 .IP -v
@@ -141,4 +143,3 @@ Copyright
 Maintained by:
 
 (C) 2011 Iain Buclaw
-
