--- a/dmd-script.1
+++ b/dmd-script.1
@@ -63,6 +63,8 @@ where to look for imports
 .I path
 is a ; separated list of paths. Multiple -I's can be used, and the paths are searched in the same order.
 
+.IP -i
+Include imported modules in the compilation, as if they were given on the command line. When this option is enabled, all imported modules are compiled except those that are part of libphobos.
 .IP -ignore
 ignore unsupported pragmas
 .IP -inline
