No longer ignore -betterC
gdc implemented -fno-druntime a while back.

Signed-off-by: Andrei Horodniceanu <a.horodniceanu@proton.me>

--- a/dmd-script.1
+++ b/dmd-script.1
@@ -21,6 +21,8 @@ generate code for all template instantiations
 pass -arch option to gdc
 .IP -boundscheck=[on|safeonly|off]
 bounds checks on, in @safe only, or off
+.IP -betterC
+omit generating some runtime information and helper functions
 .IP -c
 compile only, do not link
 .IP -cov
