--- a/dmd-script.1
+++ b/dmd-script.1
@@ -15,6 +15,8 @@ D interface files
 Object files to link in
 .IP files.a
 Library files to link in
+.IP -allinst
+generate code for all template instantiations
 .IP "-arch ..."
 pass -arch option to gdc
 .IP -c
