--- a/dmd-script.1
+++ b/dmd-script.1
@@ -19,6 +19,8 @@ Library files to link in
 generate code for all template instantiations
 .IP "-arch ..."
 pass -arch option to gdc
+.IP -boundscheck=[on|safeonly|off]
+bounds checks on, in @safe only, or off
 .IP -c
 compile only, do not link
 .IP -cov
