--- a/dmd-script.1
+++ b/dmd-script.1
@@ -17,6 +17,8 @@ Object files to link in
 Library files to link in
 .IP "-arch ..."
 pass -arch option to gdc
+.IP -boundscheck=[on|safeonly|off]
+bounds checks on, in @safe only, or off
 .IP -c
 compile only, do not link
 .IP -cov
