Support -extern-std
Signed-off-by: Andrei Horodniceanu <a.horodniceanu@proton.me>

--- a/dmd-script.1
+++ b/dmd-script.1
@@ -41,6 +41,8 @@ debug library to use instead of phobos
 default library to use instead of phobos
 .IP -deps=filename
 write module dependencies to filename
+.IP -extern-std=standard
+Sets the C++ name mangling compatiblity. Check -fextern-std in gdc(1)
 .IP -f...
 pass an -f... option to gdc
 .IP -fall-sources
