--- a/dmd-script.1
+++ b/dmd-script.1
@@ -83,6 +83,8 @@ pass an -m... option to gdc
 open web browser on manual page
 .IP -map
 generate linker .map file
+.IP -mixin=filename
+expand and save mixins to file specified by filename
 .IP -noboundscheck
 turns off array bounds checking for all functions
 .IP -O
