Support -preview and -revert
Signed-off-by: Andrei Horodniceanu <a.horodniceanu@proton.me>

--- a/dmd-script.1
+++ b/dmd-script.1
@@ -117,8 +117,12 @@ name output file to filename
 do not strip paths from source file
 .IP -pipe
 use pipes instead of intermediate files
+.IP -preview=id
+enable an upcoming language change identified by id. Check -fpreview in gdc(1)
 .IP -profile
 profile runtime performance
+.IP -revert=id
+revert language change identified by id. Check -frevert in gdc(1)
 .IP -quiet
 suppress unnecessary error messages
 .IP -q,<arg1>[,<arg2>,<arg3>,...]
