--- a/dmd-script.1
+++ b/dmd-script.1
@@ -133,6 +133,8 @@ compile release version
 run resulting program, passing args
 .IP -shared
 generate shared library (DLL)
+.IP -transition=id
+report additional information about D language changes identified by id. Check -ftransition in gdc(1)
 .IP -unittest
 compile in unit tests
 .IP -v
