--- a/dmd-script.1
+++ b/dmd-script.1
@@ -124,6 +124,8 @@ Print the usage information and exit
 .IP -version=level
 compile in version code >= level
 .IP  version=ident
+.IP -vtemplates
+list statistics on template instantiations
 .IP -vtls
 list all variables going into thread local storage
 .IP -w
