Support -verror-style
Signed-off-by: Andrei Horodniceanu <a.horodniceanu@proton.me>

--- a/dmd-script.1
+++ b/dmd-script.1
@@ -141,6 +141,8 @@ compile in unit tests
 verbose
 .IP -vdmd
 Print commands executed by this wrapper script
+.IP -verror-style=[gnu|sarif]
+Set the style for file/line number annotations on compiler messages
 .IP --version
 print compiler version and exit
 .IP -h|--help
