--- a/dmd-script.1
+++ b/dmd-script.1
@@ -25,6 +25,10 @@ bounds checks on, in @safe only, or off
 omit generating some runtime information and helper functions
 .IP -c
 compile only, do not link
+.IP -color
+turn  colored console output on
+.IP -color=[on|off|auto]
+Force colored console output on or off, or only when not redirected
 .IP -cov
 do code coverage analysis
 .IP -D
