--- a/dmd-script.1
+++ b/dmd-script.1
@@ -107,6 +107,8 @@ open web browser on manual page
 generate linker .map file
 .IP -mixin=filename
 expand and save mixins to file specified by filename
+.IP -mv=package.module=<filespec>
+Use <filespec> as source file for package.module. Check -fmodule-file in gdc(1) for more details
 .IP -noboundscheck
 turns off array bounds checking for all functions
 .IP -O
